fix: fix mobile alignment issues login screen

--- a/apps/client/src/app/main/modules/login/components/login-form/login-form.component.scss
+++ b/apps/client/src/app/main/modules/login/components/login-form/login-form.component.scss
@@ -52,6 +52,12 @@
   color: white;
 }
 
+.center-align-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 mat-placeholder, input {
   color: white;
 }
